# hexapawn

./: README.md  pyproject.toml
src/hexapawn/: __init__.py
tests/: test_move.py  test_squares.py
